2010-12-8  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-11.
    * man/jags: \dontrun jags2, need to write a function to search for JAGS.

2010-9-28  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-10.
    * man/traceplot: comment out docType


2010-8-10  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-09.
    * man/jags: reactivate dic.samples example.


2010-5-23  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-08.
    * man/jags: reactivate dic.samples example.

2010-5-18  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-02.
    * R/jags2: 
        1. fix a bug in jagsscript.  
        2. change CODAIndex to CODAindex
    * R/jags.sim: change CODAIndex to CODAindex

2010-2-3  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-01.
    * R/as.bugs.array: fix sims.list permutation
    * R/jags.sim: fix sims list permutation
    * R/jags2: fix missing data.list name, this causes read.rjags failure 

2009-12-21  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-30.
    * R/as.bugs.array2: comment out n.burnin=0 in the code.

2009-12-15  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-29.
    * R/jags: now really allow a data to be a data list.
    * R/as.mcmc: create new a as.mcmc.rjags method
    * R/traceplot: reset par(ask) while exiting traceplot

2009-12-14  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-28.
    * R/autojags: fix a bug in the condtion of checking convergence 

2009-11-9  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-27.
    * R/jags: 
      1. change the way to specify the working directory.
      2. allow data to be list of data object.
    * R/jags2: 
      1. change the way to specify the working directory.
      2. allow data to be list of data object.