@@ -1,6 +1,6 @@
 Package: R2jags
-Version: 0.02-12
-Date: 2011-2-5
+Version: 0.02-13
+Date: 2011-3-10
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <suyusung@tsinghua.edu.cn>, 
         Masanao Yajima <yajima@stat.columbia.edu>,
